--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,14 @@ spring:
 
   jpa:
     hibernate:
-     ddl-auto: create
+     ddl-auto: create #none으로 하면 기존 db 저장함
     properties:
       hibernate:
-        show_sql: true
+ #       show_sql: true
         format_sql: true
 
 logging.level:
   org.hibernate.SQL: debug
+  org.hibernate.orm.jdbc.bind: trace
 # org.hibernate.type: trace #스프링 부트 2.x, hibernate5
 # org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
