--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
      ddl-auto: create #none으로 하면 기존 db 저장함
     properties:
       hibernate:
+        default_batch_fetch_size: 1000
  #       show_sql: true
         format_sql: true
 
