Fix : 스프링시큐리티 + jwt 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,7 @@ jwt:
 
 logging.level:
   org.hibernate.SQL: debug
+  org.springframework.security: DEBUG
   #org.hibernate.orm.jdbc.bind: trace
 # org.hibernate.type: trace #스프링 부트 2.x, hibernate5
 # org.hibernate.orm.jdbc.bind: trace #스프링 부트 3.x, hibernate6
