--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ group = 'cosmetics'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	toolchain{
+		languageVersion = JavaLanguageVersion.of(17)
+	}
 }
 
 configurations {
@@ -33,13 +35,15 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.0'
 	//Querydsl 추가
 	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"
+	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 	//test 롬복 사용
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
 
+	//compileOnly 'com.querydsl:querydsl-apt:5.0.0:jpa'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -63,10 +67,23 @@ tasks.named('test') {
 	useJUnitPlatform()
 }
 
-test {
-	useJUnitPlatform()
+// ### QueryDSL 관련 설정 시작 ###
+// Querydsl Q Class 생성 위치
+def querydslDir = "$projectDir/build/generated"
+
+// java source set 에 Querydsl Q Class 위치 추가
+sourceSets {
+	main.java.srcDirs += [ querydslDir ]
 }
+
+// 생성된 Q Class가 컴파일될 디렉토리 설정
+tasks.withType(JavaCompile) {
+	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
+	options.compilerArgs << "-parameters"
+}
+
+
 //Querydsl 추가, 자동 생성된 Q클래스 gradle clean으로 제거
 clean {
-	delete file('src/main/generated')
+	delete file(querydslDir)
 }
