--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=BOGOShop
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+springdoc.swagger-ui.path=/swagger-ui.html
