Fix : 오류 수정 - 데이터 조회시, null 값 조정 - 엔티티 연관 관계 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=BOGOShop
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.datasource.url=jdbc:h2:tcp://localhost/~/BOGOShop;DB_CLOSE_ON_EXIT=FALSE
